--- a/templates/index.html
+++ b/templates/index.html
@@ -4,37 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask Bootstrap App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{{ url_for('static',filename='styles/main.css') }}" rel="stylesheet">
+    
 </head>
 <body>
-    <h1 class="text-center">Pflege Bot</h1>
+    <h1 class="text-center">The Bot for <span class="text-primary" id="element"></span></h1>
+    
     <div class="d-flex justify-content-center align-items-center" style="height: 30vh;">
-        <button class="btn btn-primary" id="openModalBtn">Create new request!</button>
+        <button class="btn btn-primary text-white " id="openModalBtn">Create new request!</button>
     </div>
-    <hr class="m-4">
+    <hr class="m-3">
     <!-- Div containing requests -->
     <div class="requests">
     </div>
-    <div>
-        <!-- Demo request -->
-        <div class="bg-primary p-2 rounded m-4 text-white d-flex justify-content-between">
+
+    <!-- Demo request -->
+    <div class="bg-secondary p-2 rounded m-4 text-white d-flex justify-content-between">
+        <div class="d-flex justify-content-between">
             <div>
-                <div class="d-flex align-items-center">
-                    <h2 class="fw-bold fst-italic">${request.name}</h2>
-                    ${statusIndicator}
-                </div>
+                <h2 class="fw-bold fst-italic">${request.name}</h2>
                 <hr>
+                ${statusIndicator}
+            </div>
+            <div class="ms-2">
                 <p><span class="fw-bold">Room:</span> <span>${request.room}</span></p>
                 <p><span class="fw-bold">Type:</span> <span>${request.type}</span></p>
                 <p><span class="fw-bold">Medicine:</span> <span>${request.medicine}</span></p>
             </div>
-            <div  class="d-flex align-items-center">
-                <button type="button" class="btn btn-danger">Send robot</button>
-            </div>
+
+        </div>
+        <div class="d-flex align-items-center">
+            ${send_button}
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal create req -->
     <div class="modal fade" id="requestModal" tabindex="-1" aria-labelledby="requestModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -52,9 +56,6 @@
                         <select class="form-select" id="roomInput">
                             <option value="1">1</option>
                             <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
                         </select>
                     </div>
                     <div class="mb-3">
@@ -74,16 +75,37 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="confirmBtn">Confirm</button>
+                    <button type="button" class="btn btn-primary text-white " id="confirmBtn">Confirm</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Scripts -->
+    <!-- Modal confirm that done -->
+    <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmationModalLabel">Confirmation</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Robot ready to go back?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary">No</button>
+                    <button type="button" class="btn btn-primary" id="yesButton">Yes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Imported Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/socket.io/client-dist/socket.io.min.js"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
     <script>
-        // Reload all requests
         function reloadRequests() {
             fetch('/api', {
                 method: 'GET'
@@ -134,13 +156,12 @@
                         }
 
                         var requestHtml = `
-                        <div class="bg-primary p-2 rounded m-4 text-white d-flex justify-content-between">
+                        <div class="bg-secondary p-2 rounded m-3 text-white d-flex justify-content-between hover-effect">
                             <div>
                                 <div class="d-flex align-items-center">
                                     <h2 class="fw-bold fst-italic">${request.name}</h2>
                                     ${statusIndicator}
                                 </div>
-                                <hr>
                                 <p><span class="fw-bold">Room:</span> <span>${request.room}</span></p>
                                 <p><span class="fw-bold">Type:</span> <span>${request.type}</span></p>
                                 <p><span class="fw-bold">Medicine:</span> <span>${request.medicine}</span></p>
@@ -160,9 +181,29 @@
                         collection.forEach(function(button) {
                             button.addEventListener('click', function() {
                                 requestId = button.dataset.requestId;
-                                console.log(requestId);
-                                fetch(`/api/send_robot?id=${requestId}`, {
-                                    method: 'PUT'
+                                req = fetch(`/api/request?id=${requestId}`, {
+                                    method: 'GET'
+                                })
+                                .then(response => {
+                                    if (!response.ok) {
+                                        throw new Error('Failed to fetch request');
+                                    }
+                                    return response.json();
+                                })
+                                .then(data => {
+                                    console.log('Request:', data);
+                                    send_robot(data["room"]);
+                                    
+                                })
+                                .catch(error => {
+                                    console.error('Error:', error);
+                                    // Handle error
+                                });
+
+
+                                // Update the request to in progress
+                                fetch(`/api/update_req?id=${requestId}&status=in progress`, {
+                                    method: 'POST'
                                 })
                                 .then(response => {
                                     if (!response.ok) {
@@ -178,6 +219,29 @@
                                     console.error('Error:', error);
                                     // Handle error
                                 });
+                                
+                                function send_robot(room){
+                                    // Send the robot
+                                    fetch(`/api/send_robot?room_id=${room}`, {
+                                        method: 'PUT'
+                                    })
+                                    .then(response => {
+                                        if (!response.ok) {
+                                            throw new Error('Failed to send request');
+                                        }
+                                        return response.json();
+                                    })
+                                    .then(data => {
+                                        var modal = new bootstrap.Modal(document.getElementById('confirmationModal'), {
+                                            keyboard: false
+                                        });
+                                        modal.show();
+                                    })
+                                    .catch(error => {
+                                        console.error('Error:', error);
+                                        // Handle error
+                                    });
+                                }
                             });
                         });
                 }
@@ -190,96 +254,148 @@
             
         }
 
-
-
-        document.getElementById('openModalBtn').addEventListener('click', function() {
+        function send_home(){
+            console.log("SEND HOME")
+            fetch(`/api/send_robot?room_id=0`, {
+                method: 'PUT'
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Failed to send request');
+                }
+                return response.json();
+            })
+            .then(data => {
+                fetch(`/api/update_req?id=${requestId}&status=done`, {
+                    method: 'POST'
+                })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Failed to send request');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    // Handle error
+                });
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                // Handle error
+            });
+        }
+        
+        function openModalButtonListener(){
             var modal = new bootstrap.Modal(document.getElementById('requestModal'), {
                 keyboard: false
             });
             modal.show();
-        });
+        }
 
-        document.getElementById('confirmBtn').addEventListener('click', function() {
-        var name = document.getElementById('nameInput').value;
-        var room = document.getElementById('roomInput').value;
-        var type = document.getElementById('typeInput').value;
-        var medicine = document.getElementById('medicineInput').value;
-        
-        
-        // Create a new request object
-        var request = {
-            name: name,
-            room: room,
-            type: type,
-            medicine: medicine
-        };
+        function confirmCreateRequestButtonListener(){
+            var name = document.getElementById('nameInput').value;
+            var room = document.getElementById('roomInput').value;
+            var type = document.getElementById('typeInput').value;
+            var medicine = document.getElementById('medicineInput').value;
+            
+            
+            // Create a new request object
+            var request = {
+                name: name,
+                room: room,
+                type: type,
+                medicine: medicine
+            };
 
-        // Send a PUT request to add the new request
-        fetch('/api/request', {
-            method: 'PUT',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(request)
-        })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Failed to add request');
-            }
-            return response.json();
-        })
-        .then(data => {
-            console.log(data.message); // Log success message
-            // Close the modal
-            var modal = bootstrap.Modal.getInstance(document.getElementById('requestModal'));
-            modal.hide();
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            // Handle error
-        });
-    });
-    reloadRequests();
-    </script>
+            // Send a PUT request to add the new request
+            fetch('/api/request', {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(request)
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Failed to add request');
+                }
+                return response.json();
+            })
+            .then(data => {
+                var modal = bootstrap.Modal.getInstance(document.getElementById('requestModal'));
+                modal.hide();
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                // Handle error
+            });
+        }
 
+        function registerSocketEvents(){
+            // Connect to the SocketIO server
+            var socket = io();
 
-    <!-- Include SocketIO JavaScript library -->
-    <script src="https://cdn.jsdelivr.net/npm/socket.io/client-dist/socket.io.min.js"></script>
+            // Listen for the 'new_request' event
+            socket.on('new_request', function(request) {
+                reloadRequests();
+            });
+        }
 
-    <!-- Include SocketIO JavaScript library -->
-    <script>
-        // Connect to the SocketIO server
-        var socket = io();
-
-        // Listen for the 'new_request' event
-        socket.on('new_request', function(request) {
-            reloadRequests();
-        });
-    </script>
-
-    <script>
-        // Get references to the select elements
-        var typeInput = document.getElementById("typeInput");
-        var medicineInput = document.getElementById("medicineInput");
-
-        // Add event listener to the typeInput element
-        typeInput.addEventListener("change", function() {
+        function requestTypeChangeListener(typeInput, medicineInput){
+            console.log("TEST");
             // If the selected value is "delivery", enable the medicineInput, otherwise disable it
             if (typeInput.value === "delivery") {
                 medicineInput.disabled = false;
             } else {
                 medicineInput.disabled = true;
             }
+        }
+
+        function sendHomeYesButtonListener(){
+            var modal = bootstrap.Modal.getInstance(document.getElementById('confirmationModal'));
+            modal.hide();
+            console.log("send");
+            send_home();
+        }
+
+        function headline_animation(){
+            var typed = new Typed('#element', {
+            strings: ['Lieferung', 'Abholung', 'Pflege.'],
+            typeSpeed: 100,
+            backSpeed: 150,
+            backDelay: 700,
+            startDelay: 800
+            });
+        }
+
+        document.getElementById('openModalBtn').addEventListener('click', function(){
+            openModalButtonListener();
         });
 
-        // Initially disable medicineInput
-        medicineInput.disabled = true;
-    </script>
-    
-    <script>
+        document.getElementById('confirmBtn').addEventListener('click', function(){
+            confirmCreateRequestButtonListener();
+        });
         
+        var typeInput = document.getElementById("typeInput");
 
+        typeInput.addEventListener("change", function(){
+            var medicineInput = document.getElementById("medicineInput");
+            requestTypeChangeListener(typeInput, medicineInput);
+        });
+
+        document.getElementById('yesButton').addEventListener('click', function() {
+            sendHomeYesButtonListener();
+        });
+
+        medicineInput.disabled = true;
+
+        registerSocketEvents();
+        reloadRequests();
+        headline_animation();
     </script>
-
 </body>
 </html>
