--- a/templates/index.html
+++ b/templates/index.html
@@ -104,298 +104,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/socket.io/client-dist/socket.io.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-
-    <script>
-        function reloadRequests() {
-            fetch('/api', {
-                method: 'GET'
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to fetch requests');
-                }
-                return response.json();
-            })
-            .then(data => {
-                var requestsDiv = document.querySelector('.requests');
-                var currentPath = window.location.pathname;
-
-                requestsDiv.innerHTML = ''; // Clear the existing requests
-
-                if (data.length === 0) {
-                    // If data array is empty, add a centered paragraph saying "No requests added"
-                    requestsDiv.innerHTML = `
-                        <div class="text-center">
-                            <p>No requests added</p>
-                        </div>
-                    `;
-                } else {
-                    // Otherwise, iterate through the data and display each request
-                    data.forEach(request => {
-                        var statusIndicator = '';
-                        var send_button = '';
-                        
-
-                        switch (request.status) {
-                            case 'pending':
-                                statusIndicator = `<span class="badge text-bg-warning ms-2">pending</span>`;
-                                break;
-                            case 'in progress':
-                                statusIndicator = `<span class="badge text-bg-danger mx-2">in progress</span> <div class="spinner-border text-white" role="status"><span class="sr-only"></span></div>`;
-                                break;
-                            case 'done':
-                                statusIndicator = `<span class="badge text-bg-success ms-2">done</span>`;
-                                break;
-                            default:
-                                statusIndicator = `<span class="badge text-bg-dark ms-2">unknown</span>`;
-                                break;
-                        }
-
-                        if (currentPath === '/admin') {
-                            send_button = `<button type="button" class="send-robot btn btn-danger" data-request-id="${request.id}">Send robot</button>`
-                        }
-
-                        var requestHtml = `
-                        <div class="bg-secondary p-2 rounded m-3 text-white d-flex justify-content-between hover-effect">
-                            <div>
-                                <div class="d-flex align-items-center">
-                                    <h2 class="fw-bold fst-italic">${request.name}</h2>
-                                    ${statusIndicator}
-                                </div>
-                                <p><span class="fw-bold">Room:</span> <span>${request.room}</span></p>
-                                <p><span class="fw-bold">Type:</span> <span>${request.type}</span></p>
-                                <p><span class="fw-bold">Medicine:</span> <span>${request.medicine}</span></p>
-                            </div>
-                            <div  class="d-flex align-items-center">
-                                ${send_button}
-                            </div>
-                        </div>
-                        `;
-
-                        requestsDiv.innerHTML += requestHtml;
-
-                        
-                    });
-                    var collection = document.getElementsByClassName("send-robot");
-                    collection = Array.from(collection);
-                        collection.forEach(function(button) {
-                            button.addEventListener('click', function() {
-                                requestId = button.dataset.requestId;
-                                req = fetch(`/api/request?id=${requestId}`, {
-                                    method: 'GET'
-                                })
-                                .then(response => {
-                                    if (!response.ok) {
-                                        throw new Error('Failed to fetch request');
-                                    }
-                                    return response.json();
-                                })
-                                .then(data => {
-                                    console.log('Request:', data);
-                                    send_robot(data["room"]);
-                                    
-                                })
-                                .catch(error => {
-                                    console.error('Error:', error);
-                                    // Handle error
-                                });
-
-
-                                // Update the request to in progress
-                                fetch(`/api/update_req?id=${requestId}&status=in progress`, {
-                                    method: 'POST'
-                                })
-                                .then(response => {
-                                    if (!response.ok) {
-                                        throw new Error('Failed to send request');
-                                    }
-                                    return response.json();
-                                })
-                                .then(data => {
-                                    console.log(data); // Log any response data
-                                    // Handle success
-                                })
-                                .catch(error => {
-                                    console.error('Error:', error);
-                                    // Handle error
-                                });
-                                
-                                function send_robot(room){
-                                    // Send the robot
-                                    fetch(`/api/send_robot?room_id=${room}`, {
-                                        method: 'PUT'
-                                    })
-                                    .then(response => {
-                                        if (!response.ok) {
-                                            throw new Error('Failed to send request');
-                                        }
-                                        return response.json();
-                                    })
-                                    .then(data => {
-                                        var modal = new bootstrap.Modal(document.getElementById('confirmationModal'), {
-                                            keyboard: false
-                                        });
-                                        modal.show();
-                                    })
-                                    .catch(error => {
-                                        console.error('Error:', error);
-                                        // Handle error
-                                    });
-                                }
-                            });
-                        });
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                // Handle error
-            });
-
-            
-        }
-
-        function send_home(){
-            console.log("SEND HOME")
-            fetch(`/api/send_robot?room_id=0`, {
-                method: 'PUT'
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to send request');
-                }
-                return response.json();
-            })
-            .then(data => {
-                fetch(`/api/update_req?id=${requestId}&status=done`, {
-                    method: 'POST'
-                })
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Failed to send request');
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    // Handle error
-                });
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                // Handle error
-            });
-        }
-        
-        function openModalButtonListener(){
-            var modal = new bootstrap.Modal(document.getElementById('requestModal'), {
-                keyboard: false
-            });
-            modal.show();
-        }
-
-        function confirmCreateRequestButtonListener(){
-            var name = document.getElementById('nameInput').value;
-            var room = document.getElementById('roomInput').value;
-            var type = document.getElementById('typeInput').value;
-            var medicine = document.getElementById('medicineInput').value;
-            
-            
-            // Create a new request object
-            var request = {
-                name: name,
-                room: room,
-                type: type,
-                medicine: medicine
-            };
-
-            // Send a PUT request to add the new request
-            fetch('/api/request', {
-                method: 'PUT',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(request)
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to add request');
-                }
-                return response.json();
-            })
-            .then(data => {
-                var modal = bootstrap.Modal.getInstance(document.getElementById('requestModal'));
-                modal.hide();
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                // Handle error
-            });
-        }
-
-        function registerSocketEvents(){
-            // Connect to the SocketIO server
-            var socket = io();
-
-            // Listen for the 'new_request' event
-            socket.on('new_request', function(request) {
-                reloadRequests();
-            });
-        }
-
-        function requestTypeChangeListener(typeInput, medicineInput){
-            console.log("TEST");
-            // If the selected value is "delivery", enable the medicineInput, otherwise disable it
-            if (typeInput.value === "delivery") {
-                medicineInput.disabled = false;
-            } else {
-                medicineInput.disabled = true;
-            }
-        }
-
-        function sendHomeYesButtonListener(){
-            var modal = bootstrap.Modal.getInstance(document.getElementById('confirmationModal'));
-            modal.hide();
-            console.log("send");
-            send_home();
-        }
-
-        function headline_animation(){
-            var typed = new Typed('#element', {
-            strings: ['Lieferung', 'Abholung', 'Pflege.'],
-            typeSpeed: 100,
-            backSpeed: 150,
-            backDelay: 700,
-            startDelay: 800
-            });
-        }
-
-        document.getElementById('openModalBtn').addEventListener('click', function(){
-            openModalButtonListener();
-        });
-
-        document.getElementById('confirmBtn').addEventListener('click', function(){
-            confirmCreateRequestButtonListener();
-        });
-        
-        var typeInput = document.getElementById("typeInput");
-
-        typeInput.addEventListener("change", function(){
-            var medicineInput = document.getElementById("medicineInput");
-            requestTypeChangeListener(typeInput, medicineInput);
-        });
-
-        document.getElementById('yesButton').addEventListener('click', function() {
-            sendHomeYesButtonListener();
-        });
-
-        medicineInput.disabled = true;
-
-        registerSocketEvents();
-        reloadRequests();
-        headline_animation();
-    </script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/requests.js') }}"></script>
 </body>
 </html>
