--- a/app/static/styles/main.scss
+++ b/app/static/styles/main.scss
@@ -1,7 +1,7 @@
 $primary: #d9ab3e;
 
 // import bootstrap
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 body {
