--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,8 +54,9 @@
                     <div class="mb-3">
                         <label for="roomInput" class="form-label">Room</label>
                         <select class="form-select" id="roomInput">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
+                            {% for room in rooms %}
+                                <option value="{{room}}">{{room}}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="mb-3">
