--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,29 +14,15 @@
         <button class="btn btn-primary text-white " id="openModalBtn">Create new request!</button>
     </div>
     <hr class="m-3">
+    <div id="autoCollectContainer" class="d-flex align-items-center">
+        
+    </div>
     <!-- Div containing requests -->
     <div class="requests">
     </div>
 
     <!-- Demo request -->
-    <div class="bg-secondary p-2 rounded m-4 text-white d-flex justify-content-between">
-        <div class="d-flex justify-content-between">
-            <div>
-                <h2 class="fw-bold fst-italic">${request.name}</h2>
-                <hr>
-                ${statusIndicator}
-            </div>
-            <div class="ms-2">
-                <p><span class="fw-bold">Room:</span> <span>${request.room}</span></p>
-                <p><span class="fw-bold">Type:</span> <span>${request.type}</span></p>
-                <p><span class="fw-bold">Medicine:</span> <span>${request.medicine}</span></p>
-            </div>
-
-        </div>
-        <div class="d-flex align-items-center">
-            ${send_button}
-        </div>
-    </div>
+    
 
     <!-- Modal create req -->
     <div class="modal fade" id="requestModal" tabindex="-1" aria-labelledby="requestModalLabel" aria-hidden="true">
